--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 portpicker = "0.1.1"
 serde = "1.0.219"
 serde_json = "1.0.140"
+tokio = { version = "1.45.1", features = ["sync"] }
